ci: Fix e2e test batches

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,492 +50,10 @@ stages:
   - check-release
   - deploy
 
-build:
-  stage: build
-  tags:
-    - stackgres-runner
-  script:
-    - 'mvn $MAVEN_CLI_OPTS clean verify -P safer'
-  artifacts:
-    expire_in: 1 week
-    when: always
-    paths:
-      - stackgres-k8s/src/target
-      - stackgres-k8s/src/*/target
-    reports:
-      junit:
-        - stackgres-k8s/src/*/target/surefire-reports/TEST-*.xml
-
-build ui:
-  image: alpine:3.12
-  stage: build
-  script:
-  - apk add py3-pip jq
-  - pip install yamllint yq
-  - sh -x stackgres-k8s/src/admin-ui/build.sh
-  artifacts:
-    expire_in: 1 week
-    when: always
-    paths:
-    - stackgres-k8s/src/admin-ui/target
-
-build documentation:
-  image: monachus/hugo
-  stage: build
-  script:
-  - |
-    if [[ ! -z "$CI_COMMIT_TAG" && ! "$CI_COMMIT_TAG" =~ ^latest-.*$ ]]
-    then
-      DOCUMENTATION_BASE_URL="$PRODUCTION_DOCUMENTATION_BASE_URL"
-    fi
-  - sh -x doc/build.sh
-  - STACKGRES_VERSION="$(echo 'import xml.etree.ElementTree as ET; print ET.parse("stackgres-k8s/src/pom.xml").getroot().find("{%s}version" % "http://maven.apache.org/POM/4.0.0").text' | python)"
-  - mkdir -p "doc/public/$STACKGRES_VERSION"
-  - hugo -v --source doc --destination "$(pwd)/doc/public/$STACKGRES_VERSION" --baseURL="$DOCUMENTATION_BASE_URL"
-  - cp -a "doc/public/$STACKGRES_VERSION" doc/public/latest
-  artifacts:
-    expire_in: 1 week
-    when: always
-    paths:
-    - doc/public
-
-build helm packages:
-  image: dtzar/helm-kubectl:3.1.1
-  stage: build
-  script:
-  - sh -x stackgres-k8s/install/helm/build-helm-packages.sh
-  - |
-    if [[ ! -z "$CI_COMMIT_TAG" && ! "$CI_COMMIT_TAG" =~ ^latest-.*$ ]]
-    then
-      cp -a "stackgres-k8s/install/helm/target/public/downloads/stackgres-k8s/stackgres"/* stackgres-k8s/install/helm/target/public/downloads/stackgres-k8s/stackgres/latest
-    fi
-  - find stackgres-k8s/install/helm/target/public | sed -e "s/[^-][^\/]*\// |/g" -e "s/|\([^ ]\)/|-\1/"
-  artifacts:
-    expire_in: 1 week
-    when: always
-    paths:
-    - stackgres-k8s/install/helm/target/public
-
-build helm templates:
-  image: dtzar/helm-kubectl:3.1.1
-  stage: build
-  script:
-  - sh -x stackgres-k8s/install/helm/build-helm-templates.sh
-  - |
-    if [[ ! -z "$CI_COMMIT_TAG" && ! "$CI_COMMIT_TAG" =~ ^latest-.*$ ]]
-    then
-      cp -a "stackgres-k8s/install/helm/target/public/downloads/stackgres-k8s/stackgres"/* stackgres-k8s/install/helm/target/public/downloads/stackgres-k8s/stackgres/latest
-    fi
-  - find stackgres-k8s/install/helm/target/public | sed -e "s/[^-][^\/]*\// |/g" -e "s/|\([^ ]\)/|-\1/"
-  artifacts:
-    expire_in: 1 week
-    when: always
-    paths:
-    - stackgres-k8s/install/helm/target/public
-
-.build native executable:
-  stage: native build
-  tags:
-    - stackgres-runner
-  dependencies:
-    - build
-  variables:
-    NATIVE_IMAGE_EXTRA_PREFIX: ""
-    MAVEN_EXTRA_ARGS: ""
-  timeout: 12 hour
-  script:
-    - MAVEN_CLI_OPTS="$MAVEN_CLI_OPTS -DskipTests"
-    - |
-      flock "/tmp/stackgres-build$NATIVE_IMAGE_EXTRA_PREFIX-native-executable" \
-        timeout -s KILL 3600 \
-        mvn $MAVEN_CLI_OPTS package -P native $MAVEN_EXTRA_ARGS
-    - 'cp $GRAALVM_HOME/jre/lib/amd64/libsunec.so stackgres-k8s/src/operator/target/'
-    - 'cp $GRAALVM_HOME/jre/lib/security/cacerts stackgres-k8s/src/operator/target/'
-    - 'cp $GRAALVM_HOME/jre/lib/amd64/libsunec.so stackgres-k8s/src/api-web/target/'
-    - 'cp $GRAALVM_HOME/jre/lib/security/cacerts stackgres-k8s/src/api-web/target/'
-  artifacts:
-    expire_in: 1 week
-    when: always
-    paths:
-      - stackgres-k8s/src/*/target/libsunec.so
-      - stackgres-k8s/src/*/target/cacerts
-      - stackgres-k8s/src/*/target/stackgres-*-runner
-      - stackgres-k8s/src/*/target/lib/
-      - stackgres-k8s/src/*/target/stackgres-*-runner.jar
-  only:
-    variables:
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "development"
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-      - $DO_NATIVE
-
-build operator native executable:
-  extends: .build native executable
-  variables:
-    NATIVE_IMAGE_EXTRA_PREFIX: "-operator"
-    MAVEN_EXTRA_ARGS: "-pl .,common,operator-framework,test-util,operator"
-
-build restapi native executable:
-  extends: .build native executable
-  variables:
-    NATIVE_IMAGE_EXTRA_PREFIX: "-restapi"
-    MAVEN_EXTRA_ARGS: "-pl .,common,operator-framework,test-util,api-web"
-
-build operator jvm image:
-  image: quay.io/buildah/stable:v1.15.0
-  stage: image build
-  tags:
-    - stackgres-runner
-  dependencies:
-    - build
-  timeout: 1 hour
-  script:
-    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}-jvm"'
-    - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
-    - 'export TARGET_OPERATOR_IMAGE_NAME="$CI_REGISTRY/ongresinc/stackgres/$OPERATOR_IMAGE_NAME"'
-    - buildah login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - cd stackgres-k8s/src
-    - |
-      flock /tmp/stackgres-operator-build-jvm-image \
-        sh -xe operator/src/main/buildah/build-image-jvm.sh
-  only:
-    variables:
-      - $SKIP_E2E != "true"
-      - $DO_DEPLOY
-
-build restapi jvm image:
-  image: quay.io/buildah/stable:v1.15.0
-  stage: image build
-  tags:
-    - stackgres-runner
-  dependencies:
-    - build
-  timeout: 1 hour
-  script:
-    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}-jvm"'
-    - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
-    - 'export TARGET_RESTAPI_IMAGE_NAME="$CI_REGISTRY/ongresinc/stackgres/$RESTAPI_IMAGE_NAME"'
-    - buildah login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - cd stackgres-k8s/src
-    - |
-      flock /tmp/stackgres-restapi-build-jvm-image \
-        sh -xe api-web/src/main/buildah/build-image-jvm.sh
-  only:
-    variables:
-      - $SKIP_E2E != "true"
-      - $DO_DEPLOY
-
-build operator native image:
-  image: quay.io/buildah/stable:v1.15.0
-  stage: image build
-  tags:
-    - stackgres-runner
-  dependencies:
-    - build operator native executable
-  timeout: 1 hour
-  script:
-    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
-    - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
-    - 'export TARGET_OPERATOR_IMAGE_NAME="$CI_REGISTRY/ongresinc/stackgres/$OPERATOR_IMAGE_NAME"'
-    - buildah login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - cd stackgres-k8s/src
-    - |
-      flock /tmp/stackgres-operator-build-native-image \
-        sh -xe operator/src/main/buildah/build-image-native.sh
-  only:
-    variables:
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "development"
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-      - $DO_NATIVE
-
-build restapi native image:
-  image: quay.io/buildah/stable:v1.15.0
-  stage: image build
-  tags:
-    - stackgres-runner
-  dependencies:
-    - build restapi native executable
-  timeout: 1 hour
-  script:
-    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
-    - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
-    - 'export TARGET_RESTAPI_IMAGE_NAME="$CI_REGISTRY/ongresinc/stackgres/$RESTAPI_IMAGE_NAME"'
-    - buildah login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - cd stackgres-k8s/src
-    - |
-      flock /tmp/stackgres-restapi-build-native-image \
-        sh -xe api-web/src/main/buildah/build-image-native.sh
-  only:
-    variables:
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "development"
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-      - $DO_NATIVE
-
-build admin-ui image:
-  image: quay.io/buildah/stable:v1.15.0
-  stage: image build
-  tags:
-    - stackgres-runner
-  dependencies:
-    - build ui
-  timeout: 1 hour
-  script:
-    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
-    - 'export ADMINUI_IMAGE_NAME="stackgres/admin-ui:$IMAGE_TAG"'
-    - 'export TARGET_ADMINUI_IMAGE_NAME="$CI_REGISTRY/ongresinc/stackgres/$ADMINUI_IMAGE_NAME"'
-    - buildah login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - cd stackgres-k8s/src
-    - |
-      flock /tmp/stackgres-adminui-build-image \
-        sh -xe admin-ui/buildah/build.sh
-  only:
-    variables:
-      - $SKIP_E2E != "true"
-      - $DO_DEPLOY
-
-build test images:
-  image: quay.io/buildah/stable:v1.15.0
-  stage: image build
-  tags:
-    - stackgres-runner
-  timeout: 1 hour
-  script:
-    - |
-      IT_IMAGE_NAME="$(grep -o '<it\.image>\([^<]\+\)</it\.image>' stackgres-k8s/src/pom.xml \
-        | tr '<>' '  ' | cut -d ' ' -f 3)"
-    - TARGET_IT_IMAGE_NAME="$CI_REGISTRY/ongresinc/stackgres/$IT_IMAGE_NAME"
-    - buildah login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - |
-      cat << EOF | flock /tmp/stackgres-build-it-image sh -xe
-      buildah bud -f stackgres-k8s/src/operator/src/test/docker/Dockerfile.it -t "$IT_IMAGE_NAME" .
-      buildah push -f "docker" "$IT_IMAGE_NAME" "$TARGET_IT_IMAGE_NAME"
-      buildah tag "$TARGET_IT_IMAGE_NAME" "${TARGET_IT_IMAGE_NAME%:*}:latest"
-      buildah push -f "docker" "$IT_IMAGE_NAME" "${TARGET_IT_IMAGE_NAME%:*}:latest"
-      EOF
-  only:
-    variables:
-      - $SKIP_E2E != "true"
-
-unit tests:
-  stage: test
-  variables:
-    QUARKUS_PROFILE: "test"
-  tags:
-    - stackgres-runner
-    - stackgres-quarkus-test-runner
-  script:
-    - 'mvn $MAVEN_CLI_OPTS clean verify'
-  artifacts:
-    expire_in: 1 week
-    when: always
-    reports:
-      junit:
-        - stackgres-k8s/src/*/target/surefire-reports/TEST-*.xml
-
-.e2e tests:
-  stage: test
-  image: registry.gitlab.com/ongresinc/stackgres/stackgres/it:latest
-  tags:
-    - stackgres-runner
-  variables:
-    OPERATOR_IN_KUBERNETES: "true"
-    IMAGE_TAG_SUFFIX: ""
-    E2E_SUFFIX: ""
-  timeout: 12 hour
-  script:
-    - set -xe
-    - SUFFIX="$(echo "-$E2E_SUFFIX-$E2E_RUN_ONLY" | tr -d '\n' | tr -c 'a-z0-9' '-')"
-    - SHELL_XTRACE="$([ "$E2E_DEBUG" = true ] && echo "-x" || echo "")"
-    - export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}$IMAGE_TAG_SUFFIX"
-    - export KIND_NAME="kind$SUFFIX"
-    - export K8S_REUSE="${K8S_REUSE:-true}"
-    - export K8S_FROM_DIND=true
-    - export E2E_BUILD_IMAGES=false
-    - export E2E_WAIT_OPERATOR=false
-    - export E2E_PULLED_IMAGES_PATH="/tmp/pulled-images$SUFFIX"
-    - |
-      if [ "$E2E_CLEAN_IMAGE_CACHE" = "true" ]
-      then
-        rm -rf "$E2E_PULLED_IMAGES_PATH"
-      fi
-    - |
-      if [ -n "$E2E_TEST" ]
-      then
-        export E2E_ONLY_INCLUDE="$E2E_TEST"
-      fi
-    - 'export E2E_OPERATOR_REGISTRY_USER=$CI_REGISTRY_USER'
-    - 'export E2E_OPERATOR_REGISTRY_PASSWORD=$CI_REGISTRY_PASSWORD'
-    - 'export E2E_OPERATOR_REGISTRY=$CI_REGISTRY'
-    - 'export E2E_OPERATOR_REGISTRY_PATH=/ongresinc/stackgres/'
-    - 'export E2E_FORCE_IMAGE_PULL=true'
-    - |
-      flock -s /tmp/stackgres-build-operator-native-executable \
-        flock -s /tmp/stackgres-build-restapi-native-executable \
-        flock "/tmp/stackgres-integration-test$SUFFIX" \
-        timeout -s KILL 3600 \
-        sh $SHELL_XTRACE stackgres-k8s/e2e/run-all-tests.sh
-  artifacts:
-    expire_in: 1 week
-    when: always
-    paths:
-    - stackgres-k8s/e2e/target
-    reports:
-      junit:
-        - stackgres-k8s/e2e/target/e2e-tests-junit-report.xml
-
-.e2e tests jvm image:
-  extends: .e2e tests
-  variables:
-    E2E_SUFFIX: "jvm-image"
-    IMAGE_TAG_SUFFIX: "-jvm"
-  only:
-    variables:
-      - $SKIP_E2E != "true"
-  artifacts:
-    expire_in: 1 week
-    when: always
-    paths:
-    - stackgres-k8s/e2e/target
-
-e2e tests jvm image part 1/2:
-  extends: .e2e tests jvm image
-  variables:
-    E2E_RUN_ONLY: non_exclusive:1/2
-
-e2e tests jvm image part 2/2:
-  extends: .e2e tests jvm image
-  variables:
-    E2E_RUN_ONLY: non_exclusive:2/2
-
-e2e exclusive tests jvm image:
-  extends: .e2e tests jvm image
-  variables:
-    E2E_RUN_ONLY: exclusive:1/1
-
-.e2e tests native image:
-  extends: .e2e tests
-  variables:
-    E2E_SUFFIX: "native-image"
-    IMAGE_TAG_SUFFIX: ""
-  only:
-    variables:
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "development"
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
-      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-      - $DO_NATIVE
-  artifacts:
-    expire_in: 1 week
-    when: always
-    paths:
-    - stackgres-k8s/e2e/target
-
-e2e tests native image part 1/2:
-  extends: .e2e tests native image
-  variables:
-    E2E_RUN_ONLY: non_exclusive:1/2
-
-e2e tests native image part 2/2:
-  extends: .e2e tests native image
-  variables:
-    E2E_RUN_ONLY: non_exclusive:2/2
-
-e2e exclusive tests native image:
-  extends: .e2e tests native image
-  variables:
-    E2E_RUN_ONLY: exclusive:1/1
-
-enforce release:
-  stage: check-release
-  tags:
-    - stackgres-runner
-  dependencies:
-    - build
-  script:
-    - MAVEN_CLI_OPTS="$MAVEN_CLI_OPTS -DskipTests -Dquarkus.skipAugmentation=true"
-    - 'mvn $MAVEN_CLI_OPTS enforcer:enforce@enforce-no-snapshots'
-  only:
-    variables:
-      - $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-
-deploy jvm image:
-  image: quay.io/buildah/stable:v1.15.0
-  stage: deploy
-  tags:
-    - stackgres-runner
-  script:
-    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"-jvm'
-    - 'export IMAGE_UPLOAD_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_REF_NAME"}"-jvm'
-    - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
-    - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
-    - 'export OPERATOR_IMAGE_UPLOAD_NAME="stackgres/operator:$IMAGE_UPLOAD_TAG"'
-    - 'export RESTAPI_IMAGE_UPLOAD_NAME="stackgres/restapi:$IMAGE_UPLOAD_TAG"'
-    - 'buildah pull docker-daemon:"$OPERATOR_IMAGE_NAME"'
-    - 'buildah push --format=docker --authfile $REGISTRY_AUTH_FILE $OPERATOR_IMAGE_NAME "docker://docker.io/$OPERATOR_IMAGE_UPLOAD_NAME"'
-    - 'buildah pull docker-daemon:"$RESTAPI_IMAGE_NAME"'
-    - 'buildah push --format=docker --authfile $REGISTRY_AUTH_FILE $RESTAPI_IMAGE_NAME "docker://docker.io/$RESTAPI_IMAGE_UPLOAD_NAME"'
-  only:
-    variables:
-      - $SKIP_DEPLOY != "true" && $CI_COMMIT_REF_NAME == "development"
-      - $SKIP_DEPLOY != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-
-deploy native image:
-  image: quay.io/buildah/stable:v1.15.0
-  stage: deploy
-  tags:
-    - stackgres-runner
-  script:
-    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
-    - 'export IMAGE_UPLOAD_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_REF_NAME"}"'
-    - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
-    - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
-    - 'export OPERATOR_IMAGE_UPLOAD_NAME="stackgres/operator:$IMAGE_UPLOAD_TAG"'
-    - 'export RESTAPI_IMAGE_UPLOAD_NAME="stackgres/restapi:$IMAGE_UPLOAD_TAG"'
-    - 'buildah pull docker-daemon:"$OPERATOR_IMAGE_NAME"'
-    - 'buildah push --format=docker --authfile $REGISTRY_AUTH_FILE $OPERATOR_IMAGE_NAME "docker://docker.io/$OPERATOR_IMAGE_UPLOAD_NAME"'
-    - 'buildah pull docker-daemon:"$RESTAPI_IMAGE_NAME"'
-    - 'buildah push --format=docker --authfile $REGISTRY_AUTH_FILE $RESTAPI_IMAGE_NAME "docker://docker.io/$RESTAPI_IMAGE_UPLOAD_NAME"'
-  only:
-    variables:
-      - $SKIP_DEPLOY != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "development"
-      - $SKIP_DEPLOY != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-
-deploy adminui image:
-  image: quay.io/buildah/stable:v1.15.0
-  stage: deploy
-  tags:
-    - stackgres-runner
-  script:
-    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
-    - 'export IMAGE_UPLOAD_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_REF_NAME"}"'
-    - 'export ADMINUI_IMAGE_NAME="stackgres/admin-ui:$IMAGE_TAG"'
-    - 'export ADMINUI_IMAGE_UPLOAD_NAME="stackgres/admin-ui:$IMAGE_UPLOAD_TAG"'
-    - 'buildah pull docker-daemon:"$ADMINUI_IMAGE_NAME"'
-    - 'buildah push --format=docker --authfile $REGISTRY_AUTH_FILE $ADMINUI_IMAGE_NAME "docker://docker.io/$ADMINUI_IMAGE_UPLOAD_NAME"'
-  only:
-    variables:
-      - $SKIP_DEPLOY != "true" && $CI_COMMIT_REF_NAME == "development"
-      - $SKIP_DEPLOY != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-
-deploy helm packages and templates:
-  image: mikesir87/aws-cli:latest
-  stage: deploy
-  dependencies:
-    - build helm packages
-    - build helm templates
-  script:
-    - aws s3 sync ./stackgres-k8s/install/helm/target/public/ s3://$S3_BUCKET_NAME/
-    - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths '/*'
-  only:
-    variables:
-      - $SKIP_DEPLOY != "true" && $CI_COMMIT_REF_NAME == "development"
-      - $SKIP_DEPLOY != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
+include:
+  - local: .gitlab-ci/build.yml
+  - local: .gitlab-ci/native-build.yml
+  - local: .gitlab-ci/image-build.yml
+  - local: .gitlab-ci/test.yml
+  - local: .gitlab-ci/check-release.yml
+  - local: .gitlab-ci/deploy.yml
