ci: workaround for strange native image build error

--- a/.gitlab-ci/native-build.yml
+++ b/.gitlab-ci/native-build.yml
@@ -3,6 +3,7 @@
   stage: native build
   tags:
     - stackgres-runner
+    - stackgres-native-build-runner
   dependencies:
     - build
   variables:
