--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -1,19 +1,19 @@
 operator:
   image:
     name: "stackgres/operator"
-    tag: "0.9-jvm"
+    tag: "development-jvm"
     pullPolicy: "IfNotPresent"
 restapi:
   name: stackgres-restapi
   image:
     name: "stackgres/restapi"
-    tag: "0.9-jvm"
+    tag: "development-jvm"
     pullPolicy: "IfNotPresent"
 adminui:
   name: stackgres-adminui
   image:
     name: "stackgres/admin-ui"
-    tag: "0.9"
+    tag: "development"
     pullPolicy: "IfNotPresent"
   service:
     # Set to LoadBalancer to expose admin UI with a load balancer
