fix: Spotbugs reported issues

--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -11,7 +11,7 @@ quarkus.native.additional-build-args=\
   -H:IncludeResources=.*/*.sh,\
   -H:IncludeResources=.*/*.sql,\
   -H:IncludeResources=.*/*.properties,\
-  -H:IncludeResources=.*/banner.txt,\
+  -H:+RemoveSaturatedTypeFlows,\
   -H:IncludeResources=templates/.*
 
 # Logger Production
