fix: Added missing logging related GUCs to default list

--- a/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values.properties
@@ -41,3 +41,12 @@ archive_command=/bin/true
 lc_messages=C
 wal_compression=on
 huge_pages=off
+log_min_duration_statement=1000
+log_checkpoints=on
+log_connections=on
+log_disconnections=on
+log_lock_waits=on
+log_temp_files=0
+log_autovacuum_min_duration=0
+log_line_prefix='%t [%p]: db=%d,user=%u,app=%a,client=%h '
+log_statement=ddl
