--- a/.gitlab-ci/image-build.yml
+++ b/.gitlab-ci/image-build.yml
@@ -103,7 +103,7 @@ build admin-ui image:
       flock /tmp/stackgres-adminui-build-image \
         sh -xe admin-ui/buildah/build.sh
 
-build test images:
+build test image:
   image: quay.io/buildah/stable:v1.15.0
   stage: image build
   tags:
@@ -116,10 +116,15 @@ build test images:
     - TARGET_IT_IMAGE_NAME="$CI_REGISTRY/$CI_PROJECT_PATH/$IT_IMAGE_NAME"
     - buildah login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
     - |
-      cat << EOF | flock /tmp/stackgres-build-it-image sh -xe
+      cat << EOF > build-test-image.sh
+      echo Building...
       buildah bud -f stackgres-k8s/src/operator/src/test/docker/Dockerfile.it -t "$IT_IMAGE_NAME" .
+      echo ...done
+      echo Pushing...
       buildah push -f "docker" "$IT_IMAGE_NAME" "$TARGET_IT_IMAGE_NAME"
+      echo ...done
       EOF
+    - flock /tmp/stackgres-build-it-image sh -xe build-test-image.sh
   only:
     variables:
       - $SKIP_E2E != "true"
