--- a/stackgres-k8s/src/operator/src/main/resources/envoy/default_envoy.yaml
+++ b/stackgres-k8s/src/operator/src/main/resources/envoy/default_envoy.yaml
@@ -17,6 +17,7 @@ static_resources:
                 "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
                 stat_prefix: ingress_tcp
                 cluster: postgres_cluster
+                idle_timeout: 0s
     - name: postgres_raw_listener
       per_connection_buffer_limit_bytes: 32768  # 32 KiB
       address:
@@ -30,6 +31,7 @@ static_resources:
                 "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
                 stat_prefix: ingress_raw_tcp
                 cluster: postgres_raw_cluster
+                idle_timeout: 0s
   clusters:
     - name: postgres_cluster
       type: STATIC
