--- a/stackgres-k8s/install/helm/stackgres-operator/templates/integrate-grafana-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/integrate-grafana-job.yaml
@@ -29,8 +29,10 @@ spec:
           - "/bin/bash"
           - "-ecx"
           - |
-            {{- if and .Values.grafana.namespace .Values.grafana.secretName .Values.grafana.secretUserKey .Values.grafana.secretPasswordKey }}
-            grafana_credentials="$(kubectl get secret -n {{ .Values.grafana.namespace }} {{ .Values.grafana.secretName }} --template {{ "'{{ .data." }}{{ .Values.grafana.secretUserKey }}{{ " }}'" }}"):$(kubectl get secret -n {{ .Release.Namespace }} {{ .Values.grafana.secretName }} --template {{ "'{{ .data." }}{{ .Values.grafana.secretPasswordKey }}{{ " }}'" }}")"
+            {{- if and .Values.grafana.secretNamespace .Values.grafana.secretName .Values.grafana.secretUserKey .Values.grafana.secretPasswordKey }} 
+            grafana_credentials="$(kubectl get secret -n '{{ .Values.grafana.secretNamespace }}' '{{ .Values.grafana.secretName }}' \
+              --template '{{ `{{` }} printf `%s:%s` (index .data `{{ .Values.grafana.secretUserKey }}` | base64decode) (index .data `{{ .Values.grafana.secretPasswordKey }}` | base64decode) {{ `}}` }}' \
+              )"
             {{- else }}
             grafana_credentials="{{ .Values.grafana.user }}:{{ .Values.grafana.password }}"
             {{- end }}
